fix: added social media links - added whatsapp icon - fix text alignment in about section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   /* Colors */
-  --background: #121212;
+  --background: #000000;
   --primary: #2231ff;
 }
 
